--- a/flights/styles.css
+++ b/flights/styles.css
@@ -1,9 +1,5 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
 body {
-    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
     font-size: 14px;
     color: #333;
     background-color: #fff;
@@ -46,8 +42,8 @@ label {
 
 
 .form-textbox {
-    display: inline;
-    width: 20%;
+    /*display: inline;*/
+    width: 350px;
     height: 20px;
     padding: 6px 12px;
     font-size: 14px;
@@ -57,12 +53,16 @@ label {
     background-image: none;
     border: 1px solid #ccc;
     border-radius: 5px;
-    hover:
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     box-shadow: inset 0px 1px 1px rgba(0,0,0,0.075);
     -webkit-transition: border-color ease-in-out .3s,-webkit-box-shadow ease-in-out .3s;
     -o-transition: border-color ease-in-out .3s,box-shadow ease-in-out .3s;
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .3s;
+}
+
+.form-date {
+    width:90px;
+	text-align: center;
 }
 
 .form-textbox:focus {
@@ -73,98 +73,55 @@ label {
 }
 
 
-		body, #results {
-			font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; 
-			font-size: 9pt;
-			font-weight: 0;
-		}
+#results {
+	font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; 
+	font-size: 9pt;
+	font-weight: 0;
+}
 
 
-		#results {
-			font-family: Trebuchet MS, Arial, Helvetica, sans-serif;
-			border-collapse: collapse;
-			width: 100%;
-		}
+#results {
+	font-family: Trebuchet MS, Arial, Helvetica, sans-serif;
+	border-collapse: collapse;
+	width: 100%;
+}
 
-		#results td, #results th {
-			border: 1px solid #ddd;
-			padding: 8px;
-		}
+#results td, #results th {
+	border: 1px solid #ddd;
+	padding: 8px;
+}
 
-		#results tr:nth-child(even){background-color: #f2f2f2;}
+#results tr:nth-child(even){background-color: #f2f2f2;}
 
-		#results tr:hover {background-color: #ddd;}
+#results tr:hover {background-color: #ddd;}
 
-		#results th {
-			padding-top: 12px;
-			padding-bottom: 12px;
-			text-align: left;
-			background-color: #4CAF50;
-			color: white;
-		}
-
-		
-		#request {
-			border-radius: 25px;
-			border: 2px solid #73AD21;
-			padding: 5px; 
-			/*width: 200px;
-			height: 150px; */   
-		}	
-=======
-=======
->>>>>>> parent of 3bd17f4... Add files via upload
-=======
->>>>>>> parent of 3bd17f4... Add files via upload
-=======
->>>>>>> parent of 3bd17f4... Add files via upload
-
-		body, #results {
-			font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; 
-			font-size: 9pt;
-			font-weight: 0;
-		}
+#results th {
+	padding-top: 12px;
+	padding-bottom: 12px;
+	text-align: left;
+	background-color: #4CAF50;
+	color: white;
+}
 
 
-		#results {
-			font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-			border-collapse: collapse;
-			width: 100%;
-		}
+.request {
+	border-radius: 10px;
+	border: 1px solid #286090;
+	padding: 5px; 
+	/*width: 200px;
+	height: 150px; */   
+}
 
-		#results td, #results th {
-			border: 1px solid #ddd;
-			padding: 8px;
-		}
+.ui-autocomplete-loading {
+	background: white url("./images/loading.gif") right center no-repeat;
+}
+#city { 
+	width: 25em; 
+}
 
-		#results tr:nth-child(even){background-color: #f2f2f2;}
-
-		#results tr:hover {background-color: #ddd;}
-
-		#results th {
-			padding-top: 12px;
-			padding-bottom: 12px;
-			text-align: left;
-			background-color: #4CAF50;
-			color: white;
-		}
-
-		
-		#request {
-			border-radius: 25px;
-			border: 2px solid #73AD21;
-			padding: 5px; 
-			/*width: 200px;
-			height: 150px; */   
-		}	
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
->>>>>>> parent of 3bd17f4... Add files via upload
-=======
->>>>>>> parent of 3bd17f4... Add files via upload
-=======
->>>>>>> parent of 3bd17f4... Add files via upload
-=======
->>>>>>> parent of 3bd17f4... Add files via upload
-	
+.topright {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    font-size: 18px;
+}
