--- a/flights/styles.css
+++ b/flights/styles.css
@@ -113,7 +113,7 @@ label {
 }
 
 .ui-autocomplete-loading {
-	background: white url("./images/loading.gif") right center no-repeat;
+	background: white url("./images/loading02b.gif") right center no-repeat;
 }
 #city { 
 	width: 25em; 
